--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
   </head>
-  <body>
+  <body style="justify-content: center; align-items: center;">
     <main>
     </main>
     <script src="sketch.js"></script>
